--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
         <div id="heart">❤</div>
         <div id="music-control"></div>
-        <audio id="background-music" src="/galaxy.mp3" autoplay loop></audio>
+        <audio id="background-music" src="galaxy.mp3" autoplay loop></audio>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/OrbitControls.js"></script>
